# Nessy

./: Cargo.toml  config.json  dev.sh
locales/: en.json  zh.json
src/: config.rs  main.rs
src/lib/: config.rs
src/pages/: login.rs  mod.rs  reg.rs
src/ui/: footer.rs  mod.rs  tabs.rs
