[package]
name = "Social"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras={version="*",features=["default","all_loaders"]}
egui_material_icons = "0.3.0"
image = "0.25.6"
rust-i18n = "3.1.4"
serde = "1.0.219"
serde_json = "1.0.140"
once_cell = "1.18.0"

